Improve accessibility and SEO

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                     <div class="features-list">
                         <div class="features-list-wrapper">
                             <div class="features-list-header">
-                                <div class="features-list-header-number"><span aria-hidden="false">01</span></div>
+                                <div class="features-list-header-number"><span aria-hidden="true">01</span></div>
                                 <h3>Track company-wide progress</h3>
                             </div>
                             <p class="features-list-header-details">See how your day-to-day tasks fit into the wider
@@ -92,7 +92,7 @@
                         </div>
                         <div class="features-list-wrapper">
                             <div class="features-list-header">
-                                <div class="features-list-header-number"><span aria-hidden="false">02</span></div>
+                                <div class="features-list-header-number"><span aria-hidden="true">02</span></div>
                                 <h3>Advanced built-in reports</h3>
                             </div>
                             <p class="features-list-header-details">Set internal delivery estimates and track progress
@@ -104,7 +104,7 @@
                         </div>
                         <div class="features-list-wrapper">
                             <div class="features-list-header">
-                                <div class="features-list-header-number"><span aria-hidden="false">03</span></div>
+                                <div class="features-list-header-number"><span aria-hidden="true">03</span></div>
                                 <h3>Everything you need in one place</h3>
                             </div>
                             <p class="features-list-header-details">Stop jumping from one service to another to
@@ -121,7 +121,7 @@
                     <h2 class="slider-header">What they've said</h2>
                     <div class="slider-cnt">
                         <div class="slider-card-wrapper">
-                            <div class="slider-card duplicate-slider-card" aria-hidden="false">
+                            <div class="slider-card duplicate-slider-card" aria-hidden="true">
                                 <img src="./assets/images/avatar-richard.png" alt="" class="slider-card-photo">
                                 <div class="slider-card-cnt">
                                     <h3 class="slider-cnt-title">Richard Watts</h3>
@@ -132,7 +132,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="slider-card duplicate-slider-card" aria-hidden="false">
+                            <div class="slider-card duplicate-slider-card" aria-hidden="true">
                                 <img src="./assets/images/avatar-shanai.png" alt="" class="slider-card-photo">
                                 <div class="slider-card-cnt">
                                     <h3 class="slider-cnt-title">Shanai Gough</h3>
@@ -185,7 +185,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="slider-card duplicate-slider-card" aria-hidden="false">
+                            <div class="slider-card duplicate-slider-card" aria-hidden="true">
                                 <img src="./assets/images/avatar-anisha.png" alt="" class="slider-card-photo">
                                 <div class="slider-card-cnt">
                                     <h3 class="slider-cnt-title">Anisha Li</h3>
